fix (ui): blurry canvas on high zoom value

--- a/packages/ui/src/components/viewport/viewport.scss
+++ b/packages/ui/src/components/viewport/viewport.scss
@@ -13,4 +13,8 @@
     top: 0;
     bottom: 0;
   }
+
+  canvas {
+    image-rendering: pixelated;
+  }
 }
